<project xmlns="http://maven.apache.org/POM/4.0.0" 
	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.shrug.app</groupId>
  <artifactId>uml</artifactId>
  <version>1.2.0</version>

  <properties>
    <maven.compiler.source>3.8</maven.compiler.source>
    <maven.compiler.target>3.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-ext</artifactId>
      <version>1.4.0</version>
      <scope>compile</scope>
    </dependency>
    
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>13</version>
      <scope>compile</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>15-ea+1</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>1.3.2</version>
    </dependency>
    <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>2.4.0-b180725.0427</version>
    </dependency>
    <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>2.4.0-b180725.0644</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.10.2</version>
      <scope>compile</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.jgrapht/jgrapht-io -->
    <dependency>
        <groupId>org.jgrapht</groupId>
        <artifactId>jgrapht-io</artifactId>
        <version>1.4.0</version>
    </dependency>

    <dependency>
      <groupId>org.jgrapht</groupId>
      <artifactId>jgrapht-core</artifactId>
      <version>1.4.0</version>
    </dependency>

  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
            <release>11</release>
        </configuration>
      </plugin>

      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.0</version>
          <configuration>
              <argLine>
                  --illegal-access=permit
              </argLine>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.22.0</version>
          <configuration>
              <argLine>
                  --illegal-access=permit
              </argLine>
          </configuration>
      </plugin>

      <!--> assemble jar with dependencies -->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
	  <archive>
	    <manifest>
	      <mainClass>Main</mainClass>
	    </manifest>
	  </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>            <!-- this is used for inheritance merges -->
            <phase>package</phase>            <!-- bind to the packaging phase -->
            <goals>
	      <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
	<groupId>com.cosium.code</groupId>
	<artifactId>maven-git-code-format</artifactId>
	<version>1.39</version>
	<executions>
	  <!-- On commit, format the modified java files -->
	  <!-- On Maven verify phase, fail if any file 
	       (including unmodified) is badly formatted -->
	  <execution>
	    <id>validate-code-format</id>
	    <goals>
	      <goal>validate-code-format</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>

      
    </plugins>
  </build>
</project>
